App title on ios issue

--- a/www/css/style.less
+++ b/www/css/style.less
@@ -829,3 +829,10 @@ input.awesome {
 .mt5 {
     margin-top: 5px;
 }
+
+.hidden-xxs {
+    @media (max-width: @screen-xxs) {
+        .responsive-invisibility();
+    }
+}
+
