--- a/www/css/variables.less
+++ b/www/css/variables.less
@@ -31,4 +31,7 @@
 @sidemenu-width: 200px;
 
 @screen-iphone4: 320px;
+@screen-xxs: @screen-iphone4;
+@screen-xxs-min: @screen-xxs;
+@screen-xxs-max: (@screen-xs-min - 1);
 
